find_package(Boost COMPONENTS python REQUIRED)
if(${Boost_VERSION} GREATER 105700)
    message(AUTHOR_WARNING "Boost ${Boost_MAJOR_VERSION}.${Boost_MINOR_VERSION} is not compatible with this library.")
else()
    fwLoadProperties()

    if(NOT APPLE)
        if(NOT EXISTS "${EXTERNAL_LIBRARIES}/lib/site-packages/")
            message(WARNING "numpy is required for TutoPython and it is not found in : ${EXTERNAL_LIBRARIES}/lib/site-packages/ ")
        else()
            file(COPY "${EXTERNAL_LIBRARIES}/lib/site-packages/" DESTINATION "${CMAKE_BINARY_DIR}/Python/")
            if(${NAME}_INSTALL)
                install(DIRECTORY "${EXTERNAL_LIBRARIES}/lib/site-packages/" DESTINATION share/${FWPROJECT_NAME}_${DASH_VERSION} COMPONENT Python)
            endif()
        endif()
    endif()
endif()