if(SIGHT_ENABLE_PCH)
    add_subdirectory(pch/pchCore)
    if("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
        add_subdirectory(pch/pchCoreOg)
    endif()
endif()
add_subdirectory(core)
add_subdirectory(data)
add_subdirectory(activity)
add_subdirectory(service)
add_subdirectory(app)
add_subdirectory(utest)
add_subdirectory(utest_data)
