add_subdirectory(pch/pchCore)
add_subdirectory(core)
add_subdirectory(data)
add_subdirectory(pch/pchData)
add_subdirectory(activity)
add_subdirectory(service)
add_subdirectory(pch/pchServices)
add_subdirectory(pch/pchServicesOmp)
add_subdirectory(atoms)

if(SIGHT_BUILD_TESTS)
add_subdirectory(utest)
add_subdirectory(utestData)
endif(SIGHT_BUILD_TESTS)
