add_subdirectory(pch/pchCore)
add_subdirectory(pch/pchData)
add_subdirectory(pch/pchService)
add_subdirectory(pch/pchServiceOmp)
if("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
    add_subdirectory(pch/pchCoreOg)
    add_subdirectory(pch/pchServiceOg)
endif()
add_subdirectory(core)
add_subdirectory(data)
add_subdirectory(activity)
add_subdirectory(service)
add_subdirectory(utest)
add_subdirectory(utestData)
