add_subdirectory(video)
add_subdirectory(dimse)
add_subdirectory(itk)
if(UNIX)
    add_subdirectory(pcl)
endif()
add_subdirectory(vision)
add_subdirectory(vtk)
add_subdirectory(atoms)
add_subdirectory(igtl)
add_subdirectory(dicomweb)
add_subdirectory(document)
add_subdirectory(matrix)
add_subdirectory(dicom)
if(SIGHT_ENABLE_REALSENSE)
    add_subdirectory(realsense)
endif()
