add_subdirectory(Tuto09MatrixTransformInGS)
add_subdirectory(Tuto08MesherWithGenericScene)
add_subdirectory(Tuto17SimpleAR)
add_subdirectory(Tuto10LaunchBasicConfig)
add_subdirectory(Tuto11Picker)
add_subdirectory(Tuto01Basic)
add_subdirectory(Tuto06Filter)
add_subdirectory(Tuto04SignalSlot)
add_subdirectory(Tuto07GenericScene)
add_subdirectory(Tuto05Mesher)
add_subdirectory(Tuto13Multithread)
add_subdirectory(Tuto14Gui)
add_subdirectory(Tuto16SceneQt3D)
add_subdirectory(Tuto12Scene2D)
add_subdirectory(Tuto02DataServiceBasic)
add_subdirectory(Tuto03DataService)
add_subdirectory(Tuto15Matrix)
