add_subdirectory(tuto01_basic)
add_subdirectory(tuto02_data_service_basic)
add_subdirectory(tuto03_data_service)
add_subdirectory(tuto04_signal_slot)
add_subdirectory(tuto05_mesher)
add_subdirectory(tuto06_filter)
add_subdirectory(tuto07_generic_scene)
add_subdirectory(tuto08_mesher_with_generic_scene)
add_subdirectory(tuto09_matrix_transform_in_gs)
add_subdirectory(tuto10_launch_basic_config)
add_subdirectory(tuto11_picker)
add_subdirectory(tuto12_scene2d)
add_subdirectory(tuto13_mesh_generator_cpp)
add_subdirectory(tuto14_gui)
add_subdirectory(tuto15_matrix)
add_subdirectory(tuto17_simple_ar)
